# deepresearch

./: .gitattributes  .gitignore  .gitmodules  .rl_config_temp.json  README.md  benchmark_tasks_local.json  collect_exa_responses.py  deep_research_taskset_full_filtered.json  deep_research_taskset_full_filtered_single.json  deepresearch_rl_config.json  filter_by_rate_simple.py  get_prompts_simple.py  hf_subset_simple.py  hud.lock.yaml  inference.py  output.json  parse_results.py  pyproject.toml  res.txt  res1.txt  results.csv  results.txt  run_eval_fixed.py  run_eval_fixed.sh  runs.csv  simpleqa_upload.py  test.py  test_conversion.py  test_hardcoded_server.py  textexa.py  train.py  train_verifiers.py  upload_dataset.py
checkpoints/deepresearch-grpo-69ff86de-54c6-4699-9472-1abf61ee5564/: README.md  adapter_config.json
configs/: deepresearch.yaml  default_config.yaml
hud-python/hud/agents/: openai_chat_generic.py
hud-python/hud/rl/: actor.py  learner.py  utils.py
src/hud_controller/: __init__.py  context.py  hardcoded_exa_responses.json  server.py
